# elevenlabs-s3

./: .env.example  README.md  example.py  pyproject.toml
.github/workflows/: publish.yml
elevenlabs_s3/: __init__.py  elevenlabs_s3.py
